# tensorflow_2.0_learning

./: README.md  hello.py  pyproject.toml
