[tool.poetry]
name = "pyproject.toml"
version = "0.1.0"
description = ""
authors = ["yubin <993620487@qq.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "=1.16.2"
tensorflow = "=2.0alpha"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
